<resources>
    <string name="app_name">MegadldCLI</string>
    <string name="action_settings">Settings</string>
    <string name="error_empty_field">Field can not be empty</string>
    <string name="error_invalid_ip">Invalid IP</string>
    <string name="error_invalid_port">Invalid port</string>
    <string name="server_ip">Ip</string>
    <string name="server_dialog_title">Server Configuration</string>
    <string name="server_name">Name</string>
    <string name="server_port">Port</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="error">Something went wrong..</string>
    <string name="url_accepted">The URL has been received by the server and the download should start now</string>
    <string name="confirm_delete">Confirm delete longpressing again</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="longclick_for_send">Longclick on servername for send URL</string>
</resources>
