<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverNameLabel"
        android:text="@string/server_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/serverName" />

    <TextView
        android:text="@string/server_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverIpLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/serverIp" />

    <TextView
        android:text="@string/server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverPortLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="8000"
        android:ems="10"
        android:id="@+id/serverPort"
        android:inputType="number" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serverDialogCancel"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serverDialogSave"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>

</LinearLayout>